--- a/food_stories/core/templates/includes/footer.html
+++ b/food_stories/core/templates/includes/footer.html
@@ -1,3 +1,5 @@
+{% load tags %}
+
 <section class="ftco-subscribe ftco-section bg-light">
     <div class="overlay">
         <div class="container">
@@ -51,12 +53,11 @@
             <div class="col-md">
                 <div class="ftco-footer-widget mb-4">
                     <h2 class="ftco-heading-2">Categories</h2>
+                    {% get_categories 6 as categories %}
                     <ul class="list-unstyled">
-                        <li><a href="#" class="py-2 d-block">Food</a></li>
-                        <li><a href="#" class="py-2 d-block">Restaurant</a></li>
-                        <li><a href="#" class="py-2 d-block">Dessert</a></li>
-                        <li><a href="#" class="py-2 d-block">Lifestyle</a></li>
-                        <li><a href="#" class="py-2 d-block">Recipes</a></li>
+                        {% for category in categories %}
+                        <li><a href="#" class="py-2 d-block">{{ category.title }}</a></li>
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
