--- a/food_stories/core/templates/includes/navbar.html
+++ b/food_stories/core/templates/includes/navbar.html
@@ -12,7 +12,11 @@
                 <li class="nav-item"><a href="strories.html" class="nav-link">Stories</a></li>
                 <li class="nav-item"><a href="{% url 'stories:recipes_page' %}" class="nav-link">Recipes</a></li>
                 <li class="nav-item"><a href="{% url 'core:contact' %}" class="nav-link">Contact</a></li>
-                <li><a href="" class="btn btn-black px-3 px-md-4 py-3">Sign in</a></li>
+                {% if request.user.is_authenticated %}
+                <li><a href="{% url 'accounts:logout' %}" class="btn btn-black px-3 px-md-4 py-3">Log out</a></li>
+                {% else %}
+                <li><a href="{% url 'accounts:login' %}" class="btn btn-black px-3 px-md-4 py-3">Sign in</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
