--- a/food_stories/accounts/templates/login.html
+++ b/food_stories/accounts/templates/login.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %} Login Page | Stories {% endblock %}
+
+
+{% block css %}
+    <link rel="stylesheet" href="http:////netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+{% endblock %}
+
 {% block content %}
 <section class="ftco-section contact-section register">
         <div class="container">
@@ -28,8 +35,8 @@
                             <a href="#" class="">Don't have an account? Sign up</a>
                         </div>
 			<div class="form-group center">
-                            <a href="#" class="social"><i class="fa fa-facebook social-login fb-color"></i></a>
-                            <a href="#" class="social"><i class="fa fa-google-plus social-login google-color"></i></a>
+                            <a href="{% url 'social:begin' 'facebook' %}?next={{ request.GET.next }}" class="social"><i class="fa fa-facebook social-login fb-color"></i></a>
+                            <a href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.GET.next }}" class="social"><i class="fa fa-google-plus social-login google-color"></i></a>
                         </div>
                     </form>
 
