--- a/food_stories/core/templates/base.html
+++ b/food_stories/core/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <head>
-    <title>Stories - Free Bootstrap 4 Template by Colorlib</title>
+    <title>{% block title %} Stories {% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,6 +26,10 @@
     <link rel="stylesheet" href="{% static 'css/icomoon.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+
+    {% block  css %}
+
+    {% endblock %}
     
 </head>
 
