--- a/food_stories/core/templates/includes/navbar.html
+++ b/food_stories/core/templates/includes/navbar.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
         <a class="navbar-brand" href="index.html">Stories<span>.</span></a>
@@ -7,16 +8,34 @@
 
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="strories.html" class="nav-link">Stories</a></li>
-                <li class="nav-item"><a href="{% url 'stories:recipes_page' %}" class="nav-link">Recipes</a></li>
-                <li class="nav-item"><a href="{% url 'core:contact' %}" class="nav-link">Contact</a></li>
+                <li class="nav-item active"><a href="{% url 'core:home' %}" class="nav-link">{% trans 'Home' %}</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link">{% trans 'About' %}</a></li>
+                <li class="nav-item"><a href="strories.html" class="nav-link">{% trans 'Stories' %}</a></li>
+                <li class="nav-item"><a href="{% url 'stories:recipes_page' %}" class="nav-link">{% trans 'Recipes' %}</a></li>
+                <li class="nav-item"><a href="{% url 'core:contact' %}" class="nav-link">{% trans 'Contact' %}</a></li>
                 {% if request.user.is_authenticated %}
-                <li><a href="{% url 'accounts:logout' %}" class="btn btn-black px-3 px-md-4 py-3">Log out</a></li>
+                <li><a href="{% url 'accounts:logout' %}" class="btn btn-black px-3 px-md-4 py-3">{% trans 'Log out' %}</a></li>
                 {% else %}
-                <li><a href="{% url 'accounts:login' %}" class="btn btn-black px-3 px-md-4 py-3">Sign in</a></li>
+                <li><a href="{% url 'accounts:login' %}" class="btn btn-black px-3 px-md-4 py-3">{% trans 'Sign in' %}</a></li>
                 {% endif %}
+
+                <li>
+                    <form action="{% url 'set_language' %}" method="post">
+                        {% csrf_token %}
+                        <input name="next" type="hidden" value="{{ request.get_full_path|slice:'3:' }}" />
+                        <select name="language" onchange="this.form.submit()">
+                            {% get_current_language as LANGUAGE_CODE %}
+                            {% get_available_languages as LANGUAGES %}
+                            {% get_language_info_list for LANGUAGES as languages %}
+                            {% for language in languages %}
+                              <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                                {{ language.name_local }} ({{ language.code }})
+                              </option>
+                            {% endfor %}
+                        </select>
+                      </form>
+                
+                </li>
             </ul>
         </div>
     </div>
