--- a/food_stories/stories/templates/recipe_detail.html
+++ b/food_stories/stories/templates/recipe_detail.html
@@ -183,24 +183,16 @@
 
                     <div class="comment-form-wrap pt-5">
                         <h3 class="mb-5">Leave a comment</h3>
-                        <form action="#" class="p-5 bg-light">
-                            <div class="form-group">
-                                <label for="name">Name *</label>
-                                <input type="text" class="form-control" id="name">
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Email *</label>
-                                <input type="email" class="form-control" id="email">
-                            </div>
-                            <div class="form-group">
-                                <label for="website">Website</label>
-                                <input type="url" class="form-control" id="website">
-                            </div>
+                        <form action="" method="POST" class="p-5 bg-light">
+                            {{form.non_field_errors}}
+                            {% csrf_token %}
 
                             <div class="form-group">
                                 <label for="message">Message</label>
-                                <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
+                                {{ form.content }}
+                                {{ form.content.errors }}
                             </div>
+
                             <div class="form-group">
                                 <input type="submit" value="Post Comment" class="btn py-3 px-4 btn-primary">
                             </div>
@@ -222,12 +214,11 @@
                 <div class="sidebar-box ftco-animate">
                     <ul class="categories">
                         <h3 class="heading mb-4">Categories</h3>
-                        <li><a href="#">Travel <span>(12)</span></a></li>
-                        <li><a href="#">Tour <span>(22)</span></a></li>
-                        <li><a href="#">Destination <span>(37)</span></a></li>
-                        <li><a href="#">Drinks <span>(42)</span></a></li>
-                        <li><a href="#">Foods <span>(14)</span></a></li>
-                        <li><a href="#">Travel <span>(140)</span></a></li>
+
+                        {% for category in categories %}
+                        <li><a href="#"> {{ category.title }} <span>(12)</span></a></li>
+                        {% endfor %}
+
                     </ul>
                 </div>
 
