--- a/food_stories/stories/templates/recipes.html
+++ b/food_stories/stories/templates/recipes.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-lg-9">
                 <div class="row">
-                    {% for recipe in recipe_list %}
+                    {% for recipe in recipes %}
                     <div class="col-md-6 col-lg-12 ftco-animate">
                         <div class="blog-entry d-lg-flex">
                             <div class="half">
@@ -52,13 +52,26 @@
                     <div class="col text-center">
                         <div class="block-27">
                             <ul>
-                                <li><a href="#">&lt;</a></li>
-                                <li class="active"><span>1</span></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">5</a></li>
-                                <li><a href="#">&gt;</a></li>
+                                <li><a href="?page=1">&lt;&lt;</a></li>
+                                
+                                {% if page_obj.has_previous %}
+                                <li><a href="?page={{ page_obj.previous_page_number }}">&lt;</a></li>
+                                {% endif %}
+
+                                {% for page in page_obj.paginator.page_range %}
+                                    {% if page is page_obj.number %}
+                                        <li class="active"><span>{{ page }}</span></li>
+                                    {% else %}
+                                        <li><a href="?page={{page}}">{{ page }}</a></li>
+                                    {% endif %}
+                                {% endfor %}
+
+                                {% if page_obj.has_next %}
+                                <li><a href="?page={{ page_obj.next_page_number }}">&gt;</a></li>
+                                {% endif %}
+                                
+                                <li><a href="?page={{ page_obj.paginator.num_pages }}">&gt;&gt;</a></li>
+                                
                             </ul>
                         </div>
                     </div>
