--- a/food_stories/core/templates/contact.html
+++ b/food_stories/core/templates/contact.html
@@ -7,7 +7,7 @@
             <div class="row block-9">
                 <div class="col-md-6 order-md-last d-flex">
                     
-                    <form action="/contact/" method="POST" class="bg-light p-5 contact-form">
+                    <form action="" method="POST" class="bg-light p-5 contact-form">
                         {{ form.non_field_errors }}
                         {% csrf_token %}
                         {% for field in form %}
